--- a/templates/email/interview_complete.html
+++ b/templates/email/interview_complete.html
@@ -8,7 +8,7 @@
     <p>Thank you for attending the interview for <i>{{ grant.project }}</i>! We are in the process of presenting your grant application to the
         Undergraduate Council at large. We will be in contact at the beginning of next week with the official amount granted after the council
         votes on your grant.</p>
-    <p>As always, you can track the status of your grant <a href="{{ url_for('grant', grant_id=grant.grant_id, _external=True)}}">here</a>.</p>
+    <p>As always, you can track the status of your grant <a href="{{ url_for('grant', grant_id=grant.grant_id, key=grant.key, _external=True)}}">here</a>.</p>
     <p>Best,
     <br>Nicholas Boucher
     <br><i>Treasurer, Undergraduate Council</i></p>
