--- a/templates/search.html
+++ b/templates/search.html
@@ -137,7 +137,6 @@
 
             /* Handle clicking of typeahead suggestion */
             $('.typeahead').bind('typeahead:select', function(event, suggestion) {
-                console.log(event);
                 $.get("{{ url_for('lookup_grants', k=k) }}", { query : suggestion }).done(function(grants) {
                     var html = '<table class="table table-striped table-hover table-responsive"><thead><tr><th>Grant ID</th><th>Organization</th><th>Project</th><th>Grants Pack</th><th>Interview/Review Occured</th><th>CPF Submitted</th><th>Funds Dispensed</th><th>Status Page</th>';
                     {% if current_user.admin %}
@@ -146,7 +145,6 @@
                     html +='</tr></thead>';
                     html += '<tbody>';
                     for (i=0; i<grants.length; i++) {
-                        console.log(grants[i]);
                         html += "<tr>";
                         html += '<td class="text-nowrap">' + grants[i].grant_id + "</td>";
                         html += "<td>" + grants[i].organization + "</td>";
@@ -154,7 +152,7 @@
                         html += "<td>" + (grants[i].grants_pack ? grants[i].grants_pack : "") + "</td>";
                         html += "<td>" + (grants[i].interview_or_review_occurred ? '<i class="fa fa-check" aria-hidden="true"></i>' : "") + "</td>";
                         html += "<td>" + (grants[i].cpf_submitted ? '<i class="fa fa-check" aria-hidden="true"></i>' : "") + "</td>";
-                        html += "<td>" + (grants[i].is_paid ? '<i class="fa fa-check" aria-hidden="true"></i>' : "") + "</td>";
+                        html += "<td>" + (grants[i].funds_dispensed ? "$" + grants[i].funds_dispensed.toFixed(2) : "") + "</td>";
                         html += "<td>" + '<a href="/grant/' + grants[i].grant_id + '" class="btn btn-default">Status Page</a>' + "</td>";
                         {% if current_user.admin %}
                             html += "<td>" + '<a href="/grant/' + grants[i].grant_id + '/raw" class="btn btn-default">Raw</a>' + "</td>";
