--- a/templates/schedule_interviews.html
+++ b/templates/schedule_interviews.html
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="row jumbotron center">
         <div class="col-md-6">
             <h3>Date</h3>
@@ -26,8 +26,8 @@
         </div>
         <button id="calculate" class="btn btn-default margin15">Calculate Times</button>
     </div>
-    
-    <form action="{{ url_for('schedule_interviews') }}" method="post">   
+
+    <form action="{{ url_for('schedule_interviews') }}" method="post">
         <input type="hidden" id="form_date" name="date" value="">
         <div class="row">
             <div class="col-md-12">
@@ -37,7 +37,7 @@
                             <th><b>Grant ID</b></th>
                             <th><b>Organization</b></th>
                             <th><b>Project</b></th>
-                            <th><b>Missed Last Interview</b></th>
+                            <th><b>Last Scheduled Interview</b></th>
                             <th><b>Interview Time</b></th>
                         </tr>
                     </thead>
@@ -47,7 +47,7 @@
                                 <td class="text-nowrap">{{ grant.grant_id }}</td>
                                 <td><b>{{ grant.organization }}</b></td>
                                 <td><b>{{ grant.project }}</b></td>
-                                <td>{% if grant.interview_schedule_date %}<i class="fa fa-check" aria-hidden="true"></i>{% endif %}</td>
+                                <td>{{ grant.interview_schedule_date | datetime }}</td>
                                 <td><input type="time" class="time" name="grant:{{ grant.grant_id }}"></td>
                             </tr>
                         {% endfor %}
@@ -70,7 +70,7 @@
     var minutesPerSlot = 10;
     // Number of grants in total
     var numGrants = {{ grants | length }};
-    
+
     // helper function
     function pad2(number) {
         return (number < 10 ? '0' : '') + number
@@ -110,7 +110,7 @@
         // Makes submit button enabled
         $('#submit').attr('disabled', false);
     });
-    
+
 </script>
 
 {% endblock %}
