--- a/templates/email/owed_money_notice.html
+++ b/templates/email/owed_money_notice.html
@@ -5,7 +5,17 @@
 
 <div style="text-align:left;">
     <p>Dear {{ grant.contact_first_name }} {{ grant.contact_last_name }},</p>
-    <p>This is a reminder that <b>{{ grant.reimburse_uc_amount | usd }}</b> is owed on your UC grant for <i>{{ grant.project }}</i>.
+    <p>This is a reminder that
+        {% if grant.reimburse_uc_amount %}
+            <b>{{ grant.reimburse_uc_amount | usd }}</b>
+        {% else %}
+            {% if grant.receipts_submitted %}
+                money
+            {% else %}
+                a full reimbursement of {{ grant.amount_dispensed | usd }}
+            {% endif %}
+        {% endif %}
+            is owed on your UC grant for <i>{{ grant.project }}</i>.
         In order to avoid going into bad standing with the UC and losing eligibility for future grants, please respond to
         this email to coordinate a time to process the reimbursement.</p>
     <p>Best,
