--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,6 +66,7 @@
                 					    <li><a href="{{ url_for('grants_packs') }}">Grants Packs</a></li>
                 						<li><a href="{{ url_for('review_receipts') }}">Treasurer</a></li>
                                         <li><a href="{{ url_for('owed_money') }}">Owed Money</a></li>
+                                        <li><a href="{{ url_for('hearings') }}">Hearings</a></li>
                         				<li><a href="{{ url_for('schedule_interviews') }}">Schedule</a></li>
                         				<li><a href="{{ url_for('settings') }}">Settings</a></li>
                 					</ul>
