Fixed "Grant Always Retroactive" bug

--- a/templates/grant_application.html
+++ b/templates/grant_application.html
@@ -44,7 +44,7 @@
                     </tr>
                     <tr>
                         <td>Grant Type</td>
-                        <td>{{ "Upfront" if grant.is_upfont else "Retroactive" }}</td>
+                        <td>{{ "Upfront" if grant.is_upfront else "Retroactive" }}</td>
                     </tr>
                     <tr>
                         <td>Collaboration</td>
