--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -14,7 +14,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="row margin40">
         <div id="warning" class="alert alert-info">
             <strong>Note</strong> The user's password will be set to "password" until they choose to update it.
@@ -37,6 +37,11 @@
                 <div class="checkbox">
                     <label><input type="checkbox" name="admin" value="True"> Administrator</label>
                 </div>
+                {% if current_user.treasurer %}
+                    <div class="checkbox">
+                        <label><input type="checkbox" name="treasurer" value="True"> Treasurer</label>
+                    </div>
+                {% endif %}
                 <button type="submit" class="btn btn-default margin15">Submit</button>
             </form>
         </div>
