--- a/templates/layout.html
+++ b/templates/layout.html
@@ -64,14 +64,24 @@
                 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin <span class="caret"></span></a>
                 					<ul class="dropdown-menu" role="menu">
                 					    <li><a href="{{ url_for('grants_packs') }}">Grants Packs</a></li>
-                						<li><a href="{{ url_for('review_receipts') }}">Treasurer</a></li>
-                                        <li><a href="{{ url_for('owed_money') }}">Owed Money</a></li>
+                                        {% if not current_user.treasurer %}
+                                            <li><a href="{{ url_for('owed_money') }}">Owed Money</a></li>
+                                        {% endif %}
                                         <li><a href="{{ url_for('hearings') }}">Hearings</a></li>
                         				<li><a href="{{ url_for('schedule_interviews') }}">Schedule</a></li>
                         				<li><a href="{{ url_for('settings') }}">Settings</a></li>
                 					</ul>
                 				</li>
                 			{% endif %}
+                            {% if current_user.treasurer %}
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Treasurer <span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="{{ url_for('review_receipts') }}">Process Funds</a></li>
+                                        <li><a href="{{ url_for('owed_money') }}">Owed Money</a></li>
+                                    </ul>
+                                </li>
+                            {% endif %}
             				<li class="dropdown">
             					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ current_user.first_name }} {{ current_user.last_name | suppress_none }} <span class="caret"></span></a>
             					<ul class="dropdown-menu" role="menu">
