--- a/templates/expenses.html
+++ b/templates/expenses.html
@@ -8,8 +8,10 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="center">
+            <div class="center" style="padding-bottom:40px;">
                 <h1>Expenses</h1>
+                <h3>Click each fund to expand its expenses</h3>
+                <p>The UC budget can be found <a href="{{ url_for('budget') }}">here</a>.</p>
             </div>
             {% for fund in funds %}
                 <div class="panel-group">
