Added legislation number to expenses

--- a/templates/add_expense.html
+++ b/templates/add_expense.html
@@ -24,6 +24,10 @@
                     <input type="text" class="form-control max400" id="name" name="name">
                 </div>
                 <div class="form-group">
+                    <label for="leg_num">Legislation Number:</label>
+                    <input type="text" class="form-control max400" id="leg_num" name="leg_num">
+                </div>
+                <div class="form-group">
                     <label for="amount">Budget Amount:</label>
                     <input type="number" min="0" step=".01" class="form-control max400" id="amount" name="amount">
                 </div>
