Added grants data export feature

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -72,6 +72,7 @@
                                         {% endif %}
                                         <li><a href="{{ url_for('hearings') }}">Hearings</a></li>
                         				<li><a href="{{ url_for('schedule_interviews') }}">Schedule</a></li>
+                                        <li><a href="{{ url_for('export') }}">Export</a></li>
                         				<li><a href="{{ url_for('settings') }}">Settings</a></li>
                 					</ul>
                 				</li>
